2011-09-25  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-unregister-object): Don't release services for
	registered signals.  (Bug#9581)

2011-09-25  Teodor Zlatanov  <tzz@lifelogs.com>

	* progmodes/cfengine.el (cfengine-auto-mode): Add convenience
	function that picks between cfengine 2 and 3 support
	automatically.  Update docs accordingly.

2011-09-22  Kenichi Handa  <handa@m17n.org>

	* language/ind-util.el (indian-tml-base-table): Add TAMIL DIGIT
	ZERO.
	(indian-itrans-v5-table-for-tamil): New variable.
	(indian-tml-itrans-v5-hash): Use the above variable (Bug#9336).

2011-09-22  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-this-command-hid-stuff): Buffer-local variable
	that's true if the current command involved collapsing of text.
	It's reset to false at the beginning of the next command.
	(allout-post-command-business): Move the cursor to the beginning
	of entry if the cursor is hidden and collapsing activity just
	happened.

2011-09-24  Chong Yidong  <cyd@stupidchicken.com>

	* mouse.el (mouse-drag-track): Set scroll-margin to 0 while
	tracking (Bug#9541).

2011-09-24  Ulf Jasper  <ulf.jasper@web.de>

	* net/newst-reader.el (newsticker-html-renderer)
	(newsticker-show-news): Automatically
	load html rendering package if newsticker-html-renderer is
	set. Fixes "Warning: defvar ignored because w3m-fill-column is
	let-bound" and the error "Symbol's value as variable is void:
	w3m-fill-column".

2011-09-24  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-unregister-object): Remove match rule of signals.
	Release services only if they are defined.  (Bug#9581)

2011-09-23  Richard Stallman  <rms@gnu.org>

	* textmodes/paragraphs.el (forward-sentence): For backwards case,
	distinguish start of paragraph from start of its text.

	* mail/emacsbug.el (report-emacs-bug-query-existing-bugs): Autoload.

	* mail/rmail.el (rmail-view-buffer-kill-buffer-hook): New function.