@@ -1,3 +1,7 @@
+2011-09-27  Leo Liu  <sdl.web@gmail.com>
+
+	* ido.el (ido-read-internal): Accept cons cell HIST arg.
+
 2011-09-25  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/dbus.el (dbus-unregister-object): Don't release services for
